<resources>
    <string name="app_name">OnJuno Sample</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_state">Empty State</string>
    <string name="values_state">Values State</string>
    <string name="choose">Choose:</string>
    <string name="deposit">Deposit</string>
    <string name="icon">Icon</string>
    <string name="buy">Buy</string>
    <string name="your_crypto_holdings">Your Crypto Holdings</string>
    <string name="current_prices">Current Prices</string>
    <string name="view_all">View All</string>
    <string name="recent_transactions">Recent Transactions</string>
</resources>