<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCoinText"
        style="@style/TextView.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@id/tvSubtitle"
        app:layout_constraintEnd_toStartOf="@id/btnDeposit"
        app:layout_constraintStart_toEndOf="@id/ivIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvCoinPrice"
        style="@style/TextView.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@id/tvCoinText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvCoinText"
        tools:text="$67863.22" />

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/TextView.SubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDeposit"
        app:layout_constraintStart_toStartOf="@id/tvCoinText"
        app:layout_constraintTop_toBottomOf="@id/tvCoinText"
        tools:text="0.00056 BTC"
        tools:visibility="visible" />

    <!--Not included in the api hence never unhiding the view-->
    <TextView
        android:id="@+id/tvReturnText"
        style="@style/TextView.SubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:drawablePadding="5dp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_baseline_trending_up_24"
        app:layout_constraintBottom_toBottomOf="@id/tvSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvSubtitle"
        tools:text="0.00056 BTC"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnDeposit"
        style="@style/Widget.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/deposit"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnBuy"
        app:layout_constraintStart_toEndOf="@id/tvCoinText"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/buy"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDeposit"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>